Changed Textarea and Input CSS to fix a bug and fit our design better. Added scrollbar mixin for Chrome to textarea.

--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -28,8 +28,10 @@
   border: none;
   font-size: $bp-fs-6;
   background: $bp-color-white;
+  margin-top: 0.2*$m;
   width: 89%;
-  height: auto;
+  height: 1.9*$m;
+  line-height: 1.9*$m;
   padding: 0;
   @include placeholder($bp-color-cloud);
 
@@ -145,10 +147,9 @@
   height: 4.7*$m;
   border: 0.1*$m solid $bp-color-breeze;
   border-radius: 0.4*$m;
-  padding: 0.3*$m 0.5*$m;
+  padding: 0.5*$m;
   position: relative;
   background-color: $bp-color-white;
-
 }
 
 .bp-input--with-bullet {
