--- a/src/scss/components/_textarea.scss
+++ b/src/scss/components/_textarea.scss
@@ -1,8 +1,10 @@
 .bp-textarea-wrapper {
+  min-height: 4.7*$m;
   border: 0.1*$m solid $bp-color-breeze;
   border-radius: 0.4*$m;
   padding: 0.3*$m 0.5*$m;
-  margin-bottom: 1.5*$m;
+  position: relative;
+  background-color: $bp-color-white;
 }
 
 .bp-textarea-wrapper--focus {
@@ -17,17 +19,33 @@
 }
 
 .bp-textarea,
-.bp-textare[disabled] {
+.bp-textarea[disabled],
+.bp-textarea[readonly] {
   resize: none;
   border: none;
   font-size: $bp-fs-6;
-  background: $bp-color-white;
   padding: 0;
-  overflow: auto;
-  min-height: 0;
+  overflow-y: auto;
+  width: 100%;
+  height: 7.2*$m;
+  display: block;
+  line-height: $bp-lh-6;
+  margin-top: 0.2*$m;
+
   @include placeholder($bp-color-cloud);
+  @include scrollbar($bp-color-time);
 
   &:focus {
     border: none;
+    outline: none;
   }
+}
+
+.bp-textarea,
+.bp-textarea[readonly] {
+  background: $bp-color-white;
+}
+
+.bp-textarea[disabled] {
+  background: $bp-color-offwhite;
 }
